--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,12 @@
-<!DOCTYPE html>
-<html>
-
-  {% include head.html %}
-
-  <body>
-
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
-
-    {% include footer.html %}
-
-  </body>
-
+<!doctype html>
+<html lang="en">
+<head>
+{% include head.html %}
+</head>
+<body class="impress-not-supported">
+{% include check_browser.html %}
+<div id="impress">{{content}}</div>
+{% include hint.html %}
+{% include scripts.html %}
+</body>
 </html>
