--- a/_sass/_background.sass
+++ b/_sass/_background.sass
@@ -1,11 +1,5 @@
 =background_design()
-  background: rgb(215, 215, 215)
-  background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 500, from(rgb(240, 240, 240)), to(rgb(190, 190, 190)))
-  background: -webkit-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190))
-  background:    -moz-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190))
-  background:     -ms-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190))
-  background:      -o-radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190))
-  background:         radial-gradient(rgb(240, 240, 240), rgb(190, 190, 190))
+  background-image: radial-gradient(ellipse farthest-corner at 45px 45px , #00FFFF 0%, rgba(0, 0, 255, 0) 50%, #0000FF 95%)
 
 body
   +background_design()
