--- a/_sass/_typography.sass
+++ b/_sass/_typography.sass
@@ -28,28 +28,42 @@ h1, h2, h3, h4, h5, h6
 
 h1
   font-size: 4em
+  line-height: 1.5em
   margin-bottom: 40px
 
 h2
   font-size: 3em
+  line-height: 1.5em
   margin-bottom: 30px
 
 h3
   font-size: 2em
+  line-height: 1.5em
   margin-bottom: 20px
 
 h4
   font-size: 1.5em
+  line-height: 1.5em
   margin-bottom: 10px
 
 h5
   font-size: 1.2em
+  line-height: 1.5em
   margin-bottom: 10px
 
 h6
   font-size: 1.1em
+  line-height: 1.5em
   margin-bottom: 10px
 
+ol, ul
+  text-align: left
+
+ol
+  list-style: decimal
+
+ul
+  list-style: disc
 
 
 code, tt, var
