--- a/css/impress.sass
+++ b/css/impress.sass
@@ -3,6 +3,7 @@
 
 $primary_fg: black
 $primary_bg: white
+
 $link_fg: mediumblue
 $link_bg: rgba(255, 255, 255, 0.5)
 $link_bg_hover: opacify($link_bg, 1)
@@ -28,8 +29,8 @@ $step_width: 960px
 @import "background"
 @import "typography"
 @import "classes"
-
 @import "overview_last_slide"
+@import "syntax-highlighting"
 
 
 .impress-enabled
