--- a/_sass/_classes.sass
+++ b/_sass/_classes.sass
@@ -1,3 +1,16 @@
+/* Colour Classes, from the Variables
+.primary-color
+  color: $primary_fg
+
+.link-color
+  color: $link_fg
+
+.strong-color
+  color: $strong_color
+.em-color
+  color: $emphasis_color
+
+
 .hint
   display: none
   position: fixed
@@ -72,10 +85,9 @@
   display: block
   width: 900px
   height: 700px
-  padding: 100px 160px
 
-  background-color: white
-  border: 1px solid white
+  background-color: $primary_bg
+  border: 1px solid darken($primary_bg, 40)
   border-radius: 10px
   box-shadow: 0 2px 6px lightgrey
 
@@ -84,11 +96,16 @@
   line-height: 36px
   letter-spacing: -1px
 
-  q
+  position: relative
+
+  blockquote, q
     display: block
     font-size: 30px * 1.5
     line-height: 36px * 2
-    margin-top: 100px
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
 
     strong
       white-space: nowrap
