--- a/_sass/_typography.sass
+++ b/_sass/_typography.sass
@@ -25,34 +25,35 @@ body
 
 h1, h2, h3, h4, h5, h6
   font-family: $header_font_stack
+  text-align: center
 
 h1
-  font-size: 4em
+  font-size: 2em
   line-height: 1.5em
   margin-bottom: 40px
 
 h2
-  font-size: 3em
+  font-size: 1.8em
   line-height: 1.5em
   margin-bottom: 30px
 
 h3
-  font-size: 2em
+  font-size: 1.5em
   line-height: 1.5em
   margin-bottom: 20px
 
 h4
-  font-size: 1.5em
-  line-height: 1.5em
-  margin-bottom: 10px
-
-h5
   font-size: 1.2em
   line-height: 1.5em
   margin-bottom: 10px
 
+h5
+  font-size: 1.0em
+  line-height: 1.5em
+  margin-bottom: 10px
+
 h6
-  font-size: 1.1em
+  font-size: 0.8em
   line-height: 1.5em
   margin-bottom: 10px
 
