--- a/docs/css/impress.css
+++ b/docs/css/impress.css
@@ -98,35 +98,36 @@ body {
   min-height: 740px; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: Oregano, cursive; }
+  font-family: Oregano, cursive;
+  text-align: center; }
 
 h1 {
-  font-size: 4em;
+  font-size: 2em;
   line-height: 1.5em;
   margin-bottom: 40px; }
 
 h2 {
-  font-size: 3em;
+  font-size: 1.8em;
   line-height: 1.5em;
   margin-bottom: 30px; }
 
 h3 {
-  font-size: 2em;
+  font-size: 1.5em;
   line-height: 1.5em;
   margin-bottom: 20px; }
 
 h4 {
-  font-size: 1.5em;
-  line-height: 1.5em;
-  margin-bottom: 10px; }
-
-h5 {
   font-size: 1.2em;
   line-height: 1.5em;
   margin-bottom: 10px; }
 
+h5 {
+  font-size: 1em;
+  line-height: 1.5em;
+  margin-bottom: 10px; }
+
 h6 {
-  font-size: 1.1em;
+  font-size: 0.8em;
   line-height: 1.5em;
   margin-bottom: 10px; }
 
@@ -241,7 +242,8 @@ a {
   padding: 40px;
   margin: 20px auto;
   font-size: 40px;
-  line-height: 1.5; }
+  line-height: 1.5;
+  text-align: center; }
 
 .impress-enabled .step {
   margin: 0;
