add text-based end slide with links

--- a/hand-drawn/_layouts/slideshow.html
+++ b/hand-drawn/_layouts/slideshow.html
@@ -11,10 +11,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.4.1/lib/js/head.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.4.1/js/reveal.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.4.1/css/reveal.css" media="screen" />
-    <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.4.1/css/theme/night.min.css"
-	  media="screen" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.4.1/css/theme/night.min.css" media="screen" />
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
     <style media="screen">
+      .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5,
+      .reveal h6 {font-family: "Kaushan Script", cursive}
       .slideimage { min-width: 100% }
     </style>
   </head>
